--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Start Main Section -->
+    <section>
+        <div class="top-players">
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h2>Name-1</h2>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h2>Name-2</h2>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h2>Name-3</h2>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h2>Name-4</h2>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h2>Name-5</h2>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h2>Name-6</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Main Section -->
 </body>
 </html>
