--- a/index.html
+++ b/index.html
@@ -9,36 +9,66 @@
 </head>
 <body>
     <!-- Start Main Section -->
-    <section>
-        <div class="top-players">
-            <div class="players">
-                <div class="player">
-                    <img src="images/players/player-1.png" alt="">
-                    <h2>Name-1</h2>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-2.png" alt="">
-                    <h2>Name-2</h2>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-3.png" alt="">
-                    <h2>Name-3</h2>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-4.png" alt="">
-                    <h2>Name-4</h2>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-5.png" alt="">
-                    <h2>Name-5</h2>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-6.png" alt="">
-                    <h2>Name-6</h2>
+    <main>
+        <section class="container">
+            <div class="top-players">
+                <h2 class="taitle">Top Player</h2>
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h2 class="t2">Name-1</h2>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h2 class="t2">Name-2</h2>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h2 class="t2">Name-3</h2>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h2 class="t2">Name-4</h2>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h2 class="t2">Name-5</h2>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h2 class="t2">Name-6</h2>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+            <hr>
+            <div class="top-blogs">
+                <h2 class="taitle">Top Blogs</h2>
+                <div class="blogs">
+                    <div class="blog">
+                        <img src="images/blogs/blog-1.png" alt="">
+                        <div class="blog-info">
+                            <h2 class="t2">this is Blog-1</h2>
+                        <br>
+                        <p  class="t2">by <span>Shakil</span></p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="images/blogs/blog-2.png" alt="">
+                        <h2 class="t2">this is Blog-2</h2>
+                    </div>
+                    <div class="blog">
+                        <img src="images/blogs/blog-3.png" alt="">
+                        <h2 class="t2">this is Blog-3</h2>
+                    </div>
+                    <div class="blog">
+                        <img src="images/blogs/blog-4.png" alt="">
+                        <h2 class="t2">this is Blog-4</h2>
+                    </div>   
+                </div>
+            </div>
+            
+        </section>
+    </main>
     <!-- End Main Section -->
 </body>
 </html>
