--- a/practise.html
+++ b/practise.html
@@ -11,7 +11,7 @@
    <header>
        <nav>
            <ul>
-               <a href=""><li>Link-1</li>
+               <li><a href="">List-1</a>
                 <div class="dropdown">
                     <ul>
                         <li><a href="">link-1</a></li>
@@ -22,7 +22,7 @@
                         <li><a href="">link-6</a></li>
                     </ul>
                 </div>
-                </a>
+                </li>
                <a href=""><li>Link-2</li></a>
                <a href=""><li>Link-3</li></a>
                <a href=""><li>Link-4</li></a>
@@ -32,5 +32,9 @@
            </ul>
        </nav>
    </header> 
+   <section>
+       <h1>a type of expandable menu </h1>
+       <p>Mega menus (sometimes spelled “megamenus”) are a type of expandable menu in which many choices are displayed in a two-dimensional dropdown layout. ... Big, two-dimensional panels divided into groups of navigation options. Navigation choices structured through layout, typography, and (sometimes) icons.</p>
+   </section>
 </body>
 </html>
