--- a/practise.html
+++ b/practise.html
@@ -4,37 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-   <header>
-       <nav>
-           <ul>
-               <li><a href="">List-1</a>
-                <div class="dropdown">
-                    <ul>
-                        <li><a href="">link-1</a></li>
-                        <li><a href="">link-2</a></li>
-                        <li><a href="">link-3</a></li>
-                        <li><a href="">link-4</a></li>
-                        <li><a href="">link-5</a></li>
-                        <li><a href="">link-6</a></li>
-                    </ul>
-                </div>
-                </li>
-               <a href=""><li>Link-2</li></a>
-               <a href=""><li>Link-3</li></a>
-               <a href=""><li>Link-4</li></a>
-               <a href=""><li>Link-5</li></a>
-               <a href=""><li>Link-6</li></a>
-               <a href=""><li>Link-7</li></a>
-           </ul>
-       </nav>
-   </header> 
-   <section>
-       <h1>a type of expandable menu </h1>
-       <p>Mega menus (sometimes spelled “megamenus”) are a type of expandable menu in which many choices are displayed in a two-dimensional dropdown layout. ... Big, two-dimensional panels divided into groups of navigation options. Navigation choices structured through layout, typography, and (sometimes) icons.</p>
-   </section>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Link-1</a></li>
+                <li><a href="#">Link-2</a></li>
+                <li><a href="#">Link-3</a></li>
+                <li><a href="#">Link-4</a></li>
+                <li><a href="#">Link-5</a></li>
+                <li><a href="#">Link-6</a></li>
+                <li><a href="#">Link-7</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
